www/css/index.css
/* Prevent focus outlines. See https://stackoverflow.com/a/17772980/772086 */
* {
    -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important;
    -webkit-tap-highlight-color: transparent;
    outline: none !important;
}

html {
    /* On larger screens, give the background a little flair. (This creates a diagnoally-striped background) */
    background: #f4f4f4;
}

html.hasDarkMode {
    background: #000;
    color: #fff;
}

html.hasDarkMode {
    background: #222
}

body {
    /* Center the body with `auto`; allow margin and padding to be controlled by child elements. */
    margin: 0 auto;
    padding: 0px;

    /* Use black for better contrast */
    color: #000;

    /* Force the Content div to expand to occupy the remainder of the screen. */
    display: flex;
    flex-flow: column;
    height: 100%;

    /* Keep the background color the same as the #header (in "www/index.html") for iPhone X (and other devices with notches) */    
    background-color: #f4f4f4;

    /* On larger screens, keep max-width limited to 1000px to enhance readability. */
    width: 100%;
    max-width: 1000px;

    /* Native fonts; see https://bitsofco.de/the-new-system-font-stack/ */
    font-family: -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;

    /* Large standard font size for improved readability. 
     * Note: font-size is increased for accessibility and large screens; see `body.hasAccessibility` and media queries!
     */
    font-size: 1.1rem;

    /* Prevent callout to copy image, etc when tap to hold */
    -webkit-touch-callout: none;

    /* Prevent webkit from resizing text to fit */
    -webkit-text-size-adjust: none;

    /* Prevent unintended text selection; this also disables *intended* text selection, but the trade off is worthwhile to avoid poor UX. */
    user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;

    /* When scrolling to the bottom of the screen, do not pull down (overscroll/rubberband) the entire body/screen.
     * Note: This property is set to `contain` for the `.page` elements.
     * See: https://developers.google.com/web/updates/2017/11/overscroll-behavior
     */
    overscroll-behavior: none;

}


body.hasDarkMode {
    background: #000;
    color: #fff;
}

/* For larger screens, let the content breathe!
 * For reference, 
 *   iPhone X is 375 x 812 (w x h)
 *   Pixel 2 XL is 411 x 823
 *   iPad is 768 x 1024
 */
 @media screen and (min-width: 500px) and (min-height: 900px)
 {
     body {
         font-size: 1.3rem;
     }
 }
 
/* Mind the iPhone X gap */
@media screen and (orientation: portrait) {
    body {
        padding-top: constant(safe-area-inset-top); /* iOS 11.0 */
        padding-top: env(safe-area-inset-top); /* iOS 11.2 */
    }
}

@media screen and (orientation: landscape) {
    body {
        padding-top: 0;
    }
}

.page {
    /* Make the page *look* like a page */
    background-color: #f7f7f7;
    padding: 1em;

    /* The following CSS rules work in conjunction with a javascript function that
     * will change the `position` from `relative` (default) to `absolute`.
     */

    /* When position is absolute, this element will shrink-to-fit horizontally.
     * That looks weird, so force this element to grow-to-fit horizontally.
     */
    width: 100%;
    width: -webkit-fill-available;
    width: -moz-fill-available;
    width: fill-available;

    /* We don't want the content to be too wide, so this is a safety check. */
    max-width: calc(1000px - 2em);

    /* Let the content breathe! */
    line-height: 1.8;

    /*
     * The javascript function sets the `top` dynamically.
     * The `bottom` is always `0`; this avoids setting `height` explicitly.
     * This approach is resize-friendly (e.g., for a desktop browser).
     */
    bottom: 0;

    /* This forces content to scroll within the `.page` element. Without this, the content would scroll over the nav. */
    overflow-y: auto;
    
    /* Use floaty/touch scrolling */
    -webkit-overflow-scrolling: touch;

    /* When scrolling to the bottom of the page, do not pull down (overscroll/rubberband) the entire body/screen.
     * Note: This property is set to `none` for the body.
     * See: https://developers.google.com/web/updates/2017/11/overscroll-behavior
     */
    overscroll-behavior: contain;
}

body.hasDarkMode .page {
    background-color: #000;
}

/* `width: fill-available` does not have great support yet, so use this class instead. */
.fill-available {
    width: 100%;
    width: -webkit-fill-available;
    width: -moz-fill-available;
    width: fill-available;
    /* This `max-width` seems to fix an issue where an image 
     * will overflow when its pre-styled width is wider than its container.
     */
    max-width: 100%;
}

/* button-group is the parent of button-container */
.button-group {
    display: flex;
    flex-wrap: wrap;
}

.button-container {
    flex-grow: 1;
    margin: 4px;
}

/* For a non-nav button-container, don't pad the far left or far right side (the containing .page already has padding) */
.button-container button {
    padding: 6px;
}

button {
	background-color:#ededed;
	-moz-border-radius:8px;
	-webkit-border-radius:8px;
	border-radius:8px;
	border:1px solid #000;
	display:inline-block;
    cursor:pointer;
    text-decoration:none;
    -webkit-text-decoration:none;
    /* Use `min-height` because normal `height` is too restrictive for very large font sizes. */
    min-height: 2em;
    font-size: 0.8em;
}

/* Buttons move down 1px when they are clicked/touched.
 * This visually simulates the press of a physical button.
 */
button:active {
	position:relative;
	top:1px;
}

input {
    font-size: 1em;
}

button.emphasis {
    background-color:#dfdfdf;
    box-shadow: 0 0 1px 1px #000;
    border: 1px solid #000;
}

body.hasDarkMode button.emphasis {
    border-color: #000;
    box-shadow: 0 0 1px 1px #fff;
}
/* ... */

